--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,7 @@ nav a {
 
 /* Projects section styles */
 #projects {
+  width: 100%;
   padding: 5rem 1rem;
 }
 
@@ -140,4 +141,39 @@ nav a {
 
 #contact button[type="submit"]:hover {
   background-color: #555;
+}
+
+.avatar-wrapper {
+  display: flex;
+  align-items: flex-start;
+  margin: 0 auto;
+  padding-top: 50px;
+  max-width: 50%;
+}
+
+.avatar-wrapper img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  object-fit: cover;
+  box-shadow: 1px 1px 1px #888, 2px 2px 1px #888, 3px 3px 1px #888,
+    4px 4px 1px #888, 5px 5px 1px #888;
+}
+
+.details {
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.details h2 {
+  margin-bottom: 0.5rem;
+}
+
+.details p {
+  margin: 0;
+  padding: 1rem;
+  text-align: justify;
+  flex: 1;
 }
