--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header {
 
 nav ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 nav li {
@@ -63,86 +63,7 @@ nav a {
   margin-bottom: 2rem;
 }
 
-/* Projects section styles */
-#projects {
-  width: 100%;
-  padding: 5rem 1rem;
-}
-
-#projects h2 {
-  margin-bottom: 2rem;
-}
-
-#projects li {
-  margin-bottom: 2rem;
-}
-
-#projects h3 {
-  margin-bottom: 1rem;
-}
-
-.btn-primary {
-  background-color: #333;
-  color: #fff;
-  padding: 0.75rem 1.5rem;
-  border-radius: 0.25rem;
-  transition: all 0.2s ease;
-}
-
-.btn-primary:hover {
-  background-color: #555;
-}
-
-.btn-secondary {
-  background-color: #f8f8f8;
-  color: #333;
-  padding: 0.75rem 1.5rem;
-  border-radius: 0.25rem;
-  transition: all 0.2s ease;
-}
-
-.btn-secondary:hover {
-  background-color: #e2e2e2;
-}
-
-/* Contact section styles */
-#contact {
-  background-color: #f2f2f2;
-  padding: 5rem 1rem;
-}
-
-#contact h2 {
-  margin-bottom: 2rem;
-}
-
-#contact form label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-#contact input,
-#contact textarea {
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 0.25rem;
-  border: none;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  resize: vertical;
-}
-
-#contact button[type="submit"] {
-  background-color: #333;
-  color: #fff;
-  padding: 0.75rem 1.5rem;
-  border-radius: 0.25rem;
-  transition: all 0.2s ease;
-}
-
-#contact button[type="submit"]:hover {
-  background-color: #555;
-}
-
+/* About section styles */
 .avatar-wrapper {
   display: flex;
   align-items: flex-start;
@@ -176,4 +97,99 @@ nav a {
   padding: 1rem;
   text-align: justify;
   flex: 1;
+}
+
+/* Projects section styles */
+#projects {
+  max-width: 50%;
+  margin: 0 auto;
+  padding: 5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#projects h2 {
+  margin-bottom: 2rem;
+}
+
+#projects h3 {
+  margin-bottom: 1rem;
+}
+
+.project p {
+  margin-bottom: 1rem;
+}
+
+#projects-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.btn-primary {
+  background-color: #333;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  transition: all 0.2s ease;
+}
+
+.btn-primary:hover {
+  background-color: #555;
+}
+
+.btn-secondary {
+  background-color: #f8f8f8;
+  color: #333;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  transition: all 0.2s ease;
+}
+
+.btn-secondary:hover {
+  background-color: #e2e2e2;
+}
+
+/* Contact section styles */
+#contact {
+  background-color: #f2f2f2;
+  padding: 5rem 1rem;
+}
+
+.contact-form {
+  max-width: 50%;
+  margin: 0 auto;
+}
+
+#contact h2 {
+  margin-bottom: 2rem;
+}
+
+#contact form label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+#contact input,
+#contact textarea {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 0.25rem;
+  border: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  resize: vertical;
+}
+
+#contact button[type="submit"] {
+  background-color: #333;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.25rem;
+  transition: all 0.2s ease;
+}
+
+#contact button[type="submit"]:hover {
+  background-color: #555;
 }
