--- a/styles/style.css
+++ b/styles/style.css
@@ -2,17 +2,20 @@
 body {
   font-family: "Fira Mono", monospace;
 }
+/*  */
 
 /* Card Shadow Drop */
 .card-body {
   box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #ccc;
 }
+/*  */
 
 /* Typing Effect */
 .container p span.typed-text {
   font-weight: normal;
   color: #dd7732;
 }
+
 .container p span.cursor {
   display: inline-block;
   background-color: #ccc;
@@ -20,9 +23,11 @@ body {
   width: 3px;
   animation: blink 1s infinite;
 }
+
 .container p span.cursor.typing {
   animation: none;
 }
+
 @keyframes blink {
   0% {
     background-color: #ccc;
@@ -40,6 +45,7 @@ body {
     background-color: #ccc;
   }
 }
+/*  */
 
 /* Change Project Image Size */
 .project {
@@ -52,10 +58,12 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
 a:hover {
   text-decoration: none;
   color: inherit;
 }
+
 a:visited {
   color: inherit;
   text-decoration: none;
@@ -66,27 +74,45 @@ a:visited {
 footer {
   z-index: 999;
 }
+/*  */
 
 /* Responsive */
 @media (max-width: 768px) {
   .bottom-margin {
     margin-bottom: 2rem;
   }
+
   /* header {
     display: none;
   } */
+
   .lead {
     display: none;
   }
+
   .container > h1 > p {
     font-size: 1rem;
   }
+
   #about {
     padding-top: 2rem;
   }
 }
+/*  */
 
 /* Bootstrap CSS changes */
 .jumbotron {
   margin: 0px;
 }
+/*  */
+
+/* Carousel  */
+.round {
+  display: block;
+  width: 475px;
+  height: 475px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #ccc;
+}
+/*  */
