--- a/styles/style.css
+++ b/styles/style.css
@@ -82,8 +82,8 @@ footer {
 }
 /*  */
 
-/* Carousel  */
-#slides {
+/* Float Right  */
+.float {
   float: right;
 }
 
@@ -114,6 +114,13 @@ footer {
   .round {
     width: 300px;
     height: 300px;
+  }
+
+  .avatar {
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   /* header {
