modified index and styles for dark theme

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,18 @@
 /* Custom Font */
 body {
+  background-color: #1f1d36;
   font-family: "Fira Mono", monospace;
+  color: #f5f5f5;
+}
+/*  */
+
+/* Background Colors */
+.bg-color-section {
+  background-color: #595b83;
+}
+
+.bg-color-card {
+  background-color: #404258;
 }
 /*  */
 
