--- a/styles/style.css
+++ b/styles/style.css
@@ -25,12 +25,12 @@ body {
 /* Typing Effect */
 .container p span.typed-text {
   font-weight: normal;
-  color: #dd7732;
+  color: #e17055;
 }
 
 .container p span.cursor {
   display: inline-block;
-  background-color: #ccc;
+  background-color: #f5f5f5;
   margin-left: 0.1rem;
   width: 3px;
   animation: blink 1s infinite;
