--- a/v2/output.css
+++ b/v2/output.css
@@ -530,6 +530,9 @@ video {
 .z-10 {
   z-index: 10;
 }
+.m-auto {
+  margin: auto;
+}
 .-mx-4 {
   margin-left: -1rem;
   margin-right: -1rem;
@@ -568,6 +571,12 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
+.mb-16 {
+  margin-bottom: 4rem;
+}
 .block {
   display: block;
 }
@@ -592,11 +601,18 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-screen {
+  height: 100vh;
+}
 .w-full {
   width: 100%;
 }
 .w-6 {
   width: 1.5rem;
+}
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -606,6 +622,9 @@ video {
 }
 .max-w-xl {
   max-width: 36rem;
+}
+.max-w-full {
+  max-width: 100%;
 }
 .flex-shrink-0 {
   flex-shrink: 0;
@@ -852,6 +871,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
@@ -894,6 +917,10 @@ video {
     margin-bottom: 8rem;
   }
 
+  .sm\:mt-32 {
+    margin-top: 8rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -917,6 +944,16 @@ video {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .sm\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 
   .sm\:text-4xl {
@@ -977,6 +1014,10 @@ video {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:flex-row {
@@ -1046,6 +1087,10 @@ video {
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:grid-cols-3 {
