moved hamburger menu into nav

--- a/v2/output.css
+++ b/v2/output.css
@@ -514,6 +514,9 @@ video {
   white-space: nowrap;
   border-width: 0;
 }
+.fixed {
+  position: fixed;
+}
 .absolute {
   position: absolute;
 }
@@ -526,6 +529,9 @@ video {
 }
 .bottom-0 {
   bottom: 0px;
+}
+.top-0 {
+  top: 0px;
 }
 .z-10 {
   z-index: 10;
