--- a/v2/output.css
+++ b/v2/output.css
@@ -589,6 +589,9 @@ video {
 .mr-1 {
   margin-right: 0.25rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .block {
   display: block;
 }
@@ -958,6 +961,10 @@ video {
 
   .sm\:mt-32 {
     margin-top: 8rem;
+  }
+
+  .sm\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .sm\:block {
