--- a/v2/output.css
+++ b/v2/output.css
@@ -593,6 +593,9 @@ video {
 .mt-1 {
   margin-top: 0.25rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .block {
   display: block;
 }
@@ -629,6 +632,12 @@ video {
 .h-64 {
   height: 16rem;
 }
+.h-20 {
+  height: 5rem;
+}
+.h-32 {
+  height: 8rem;
+}
 .w-10 {
   width: 2.5rem;
 }
@@ -643,6 +652,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-20 {
+  width: 5rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -729,6 +741,10 @@ video {
 }
 .rounded-md {
   border-radius: 0.375rem;
+}
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 .border {
   border-width: 1px;
@@ -1187,5 +1203,11 @@ video {
 
   .lg\:pb-0 {
     padding-bottom: 0px;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
